# selogerplugin

./: .env.example  .gitignore  README.md  application.py  pyproject.toml  pytest.ini  requirements.txt  tenants.example.json
.github/workflows/: main_selogermw.yml
context/: README.md  api-overview.md  aviv-classified-api-v3.json  aviv-classified-api-v4.json  m2m-authentication.md  onboarding.md  use-cases.md
docs/: architecture.md  onboarding-runbook.md  operations.md
odoo/: studio_config.py
odoo/fields/: definitions.py  install.py
odoo/provision/: __init__.py  bootstrap_properties_app.py  client.py  derived_field_specs.py  env.py  field_specs.py  fields.py  notebook_page.py  properties_app.py  provision_database.py  smart_buttons.py  views.py
odoo/server_actions/: archive.py  delete.py  publish.py  update.py
ops/: add_tenant.py  derive_fields_from_openapi.py  sync_tenants_secret.sh
src/: __init__.py  app.py
src/chatter/: __init__.py  formatters.py
src/clients/: __init__.py  aviv.py  odoo.py
src/config/: field_defaults.py
src/core/: __init__.py  auth.py  country_codes.py  exceptions.py  tenant.py
src/handlers/: __init__.py  _common.py  archive.py  delete.py  health.py  publish.py  update.py
src/schema/: README.md  __init__.py  models.py
src/services/: __init__.py  attachment.py  listing.py  status_poller.py  validation.py
src/transforms/: __init__.py  building_property.py  country_specific_fr.py  energy.py  features.py  location.py  management.py  media.py  prices.py  spaces.py  structure.py  texts.py
tests/: conftest.py
(+7 files in other folders)
